--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
   },
   "homepage": "https://github.com/dezky/breweries-api#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "passport": "^0.6.0",
+    "passport-http-bearer": "^1.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.7",
     "@types/node": "^18.7.5",
+    "@types/passport-http-bearer": "^1.0.37",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
     "eslint": "^8.22.0",
